frame/support/test/tests/pallet_ui/type_value_no_return.stderr
error: Invalid pallet::type_value, expected return type
  --> $DIR/type_value_no_return.rs:18:24
   |
18 |     #[pallet::type_value] fn Foo() {}
   |                           ^^
